--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: "Century Gothic", 'Lato', sans-serif;
+  background: black;
 }
 a {
   text-decoration: none;
@@ -15,7 +16,8 @@ a {
   align-items: center;
   height: 100vh;
   position: relative;
-  background: #eee;
+  background: rgb(0, 0, 0);
+  color: white;
   text-align: center;
   padding: 0 2em;
 }
