--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,9 +37,10 @@ a {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 70px;
+  height: 40px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  background: #fff;
+  background: rgb(0, 0, 0);
+  color: white;
   z-index: 10;
 }
 .et-hero-tabs-container--top {
@@ -51,7 +52,7 @@ a {
   justify-content: center;
   align-items: center;
   flex: 1;
-  color: #000;
+  color: rgb(228, 218, 218);
   letter-spacing: 0.1rem;
   transition: all 0.5s ease;
   font-size: 0.8rem;
