--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,6 @@
 
 body {
   font-family: "Century Gothic", 'Lato', sans-serif;
-  background: black;
 }
 a {
   text-decoration: none;
@@ -16,7 +15,7 @@ a {
   align-items: center;
   height: 100vh;
   position: relative;
-  background: rgb(0, 0, 0);
+  background-image: linear-gradient(#000, rgb(77, 74, 74));
   color: white;
   text-align: center;
   padding: 0 2em;
