--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,12 +32,14 @@ a {
   opacity: 0.6;
 }
 .sections{
-  background-color: black;
   height: 100vh;
   align-items: center;
   text-align: center;
   color: white;
   padding-top: 5px;
+  background-color: #4158D0;
+background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+
 
 
 }
