--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,9 +36,11 @@ a {
   align-items: center;
   text-align: center;
   color: white;
-  padding-top: 5px;
+  padding-top: 20px;
   background-color: #4158D0;
-background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+  font-size: 2rem;
+
+background-image: linear-gradient(43deg, #222222 0%, #3f3d3f 46%, #38342d 100%);
 
 
 
@@ -82,25 +84,12 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
   background: #66b1f1;
   transition: left 0.3s ease;
 }
-@media (min-width: 800px) {
-  .et-hero-tabs h1, .et-slide h1 {
-    font-size: 3rem;
- }
-  .et-hero-tabs h3, .et-slide h3 {
-    font-size: 1rem;
- }
-  .et-hero-tab {
-    font-size: 1rem;
- }
-}
-* {
-  box-sizing: border-box;
-}
 
 .slider {
   width: 300px;
   text-align: center;
   overflow: hidden;
+  
 }
 
 .slides {
@@ -165,14 +154,7 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 .author-info a {
   color: white;
 }
-img {
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
+
 
 .slider > a {
   display: inline-flex;
